# codequery

./: CMakeLists.txt
doc/: INSTALL-LINUX.md
gui/: CMakeLists.txt
scintilla/qt/ScintillaEdit/: CMakeLists.txt
